src/test/ui/enum/nested-enum.stderr
error: enum cannot be nested inside `enum`
  --> $DIR/nested-enum.rs:2:5
   |
LL | enum Foo {
   |      --- can't be nested inside this
LL |     enum Bar { Baz },
   |     ^^^^^^^^^^^^^^^^ can't be nested inside `enum`
   |
   = help: move this enum outside the `enum` definition

error: struct cannot be nested inside `enum`
  --> $DIR/nested-enum.rs:3:5
   |
LL | enum Foo {
   |      --- can't be nested inside this
LL |     enum Bar { Baz },
LL |     struct Quux { field: u8 },
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ can't be nested inside `enum`
   |
   = help: move this struct outside the `enum` definition

error: union cannot be nested inside `enum`
  --> $DIR/nested-enum.rs:4:5
   |
LL | enum Foo {
   |      --- can't be nested inside this
...
LL |     union Wibble { field: u8 },
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ can't be nested inside `enum`
   |
   = help: move this union outside the `enum` definition

error: aborting due to 3 previous errors

